--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,6 +49,10 @@ body {
   z-index: -1;
 }
 
+.button-glow {
+  transition: box-shadow 0.5s ease;
+}
+
 .button-glow:hover {
   -webkit-box-shadow: 0px 0px 300px 57px rgba(142, 47, 230, 0.58);
   -moz-box-shadow: 0px 0px 300px 57px rgba(142, 47, 230, 0.58);
